--- a/sus.html
+++ b/sus.html
@@ -4,10 +4,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Topper Profile | GEOID CENTRE</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Noto+Serif+Bengali:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Noto+Serif+Bengali:wght@400;700&family=Fira+Code:wght@400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
-/* Global Styles */
+/* Modern Dark Variables */
+:root {
+  --bg: #0b0e14;
+  --card-bg: #161b22;
+  --accent: #3498db; /* Student Theme: Academic Blue */
+  --accent-glow: rgba(52, 152, 219, 0.3);
+  --text: #e6edf3;
+  --text-dim: #8b949e;
+  --silver: #bdc3c7;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -17,103 +27,149 @@
 }
 
 body {
-  background: linear-gradient(135deg, #b2f7ef, #0f4c3a);
+  background-color: var(--bg);
+  color: var(--text);
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  overflow-x: hidden;
+}
+
+/* Background Depth Effect */
+body::before {
+  content: "";
+  position: fixed;
+  top: 0; left: 0; width: 100%; height: 100%;
+  background: radial-gradient(circle at 50% 50%, #1a1f2e 0%, #0b0e14 100%);
+  z-index: -1;
+}
+
+/* Animations */
+@keyframes slideUp {
+  from { opacity: 0; transform: translateY(40px); filter: blur(10px); }
+  to { opacity: 1; transform: translateY(0); filter: blur(0); }
+}
+
+@keyframes starPulse {
+  0% { transform: scale(1); filter: drop-shadow(0 0 2px var(--accent)); }
+  50% { transform: scale(1.1); filter: drop-shadow(0 0 10px var(--accent)); }
+  100% { transform: scale(1); filter: drop-shadow(0 0 2px var(--accent)); }
 }
 
 /* Header (Site Standard) */
 header {
-  background: linear-gradient(135deg, #2ecc71, #1abc9c, #27ae60);
-  color: #fff;
+  padding: 35px 0;
   text-align: center;
-  padding: 25px 0;
-  font-size: 28px;
-  font-weight: 800;
-  letter-spacing: 1px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+  background: rgba(11, 14, 20, 0.85);
+  backdrop-filter: blur(15px);
   position: sticky;
   top: 0;
-  z-index: 1000;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  z-index: 100;
+  border-bottom: 1px solid rgba(255,255,255,0.05);
 }
 
-/* Profile Container */
+header h1 {
+  font-size: 1.4rem;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: var(--accent);
+  text-shadow: 0 0 15px var(--accent-glow);
+}
+
 .container {
-  width: 95%;
-  max-width: 1100px;
-  margin: 50px auto;
-  display: flex;
-  flex-wrap: wrap;
+  width: 90%;
+  max-width: 1200px;
+  margin: 40px auto;
+  display: grid;
+  grid-template-columns: 350px 1fr;
   gap: 30px;
-  flex: 1;
+  animation: slideUp 1s ease-out;
 }
 
-/* Premium Student Sidebar (Silver/Blue Theme) */
+/* Profile Card Styling */
 .profile-card {
-  flex: 1;
-  min-width: 320px;
-  background: linear-gradient(to bottom, #ffffff, #eef2f3);
-  border-radius: 30px;
-  padding: 40px 20px;
+  background: var(--card-bg);
+  border-radius: 24px;
+  padding: 40px 30px;
   text-align: center;
-  box-shadow: 0 20px 45px rgba(0,0,0,0.15);
-  border: 2px solid #3498db; /* Academic Blue Border */
+  border: 1px solid rgba(52, 152, 219, 0.2);
   height: fit-content;
+  transition: 0.4s;
+  position: relative;
 }
 
-.profile-card img {
-  width: 200px;
-  height: 200px;
+.profile-card:hover {
+  border-color: var(--accent);
+  transform: translateY(-5px);
+  box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+}
+
+.img-container {
+  position: relative;
+  width: 190px;
+  height: 190px;
+  margin: 0 auto 25px;
+}
+
+.img-container img {
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   object-fit: cover;
-  border: 6px solid #3498db;
-  margin-bottom: 20px;
-  box-shadow: 0 10px 25px rgba(52, 152, 219, 0.3);
+  border: 4px solid var(--accent);
+  padding: 5px;
+  background: var(--bg);
 }
 
-.profile-card h2 {
-  color: #051929;
-  font-size: 1.8rem;
-  margin-bottom: 5px;
-}
-
-.profile-card .badge {
-  background: linear-gradient(45deg, #3498db, #2980b9);
+.star-icon {
+  position: absolute;
+  top: -5px;
+  right: 15px;
+  background: var(--accent);
   color: #fff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.1rem;
+  box-shadow: 0 5px 15px var(--accent-glow);
+  animation: starPulse 2s infinite;
+}
+
+.profile-card h2 { font-size: 1.7rem; margin-bottom: 8px; color: #fff; }
+
+.badge {
+  font-size: 0.75rem;
+  font-weight: 700;
+  color: #fff;
+  background: linear-gradient(45deg, #3498db, #2980b9);
   padding: 6px 20px;
   border-radius: 50px;
-  font-size: 0.85rem;
-  font-weight: 700;
   display: inline-block;
-  margin-bottom: 20px;
-  box-shadow: 0 4px 10px rgba(52, 152, 219, 0.4);
+  margin-bottom: 25px;
+  text-transform: uppercase;
   letter-spacing: 1px;
 }
 
-/* Details Section */
-.profile-details {
-  flex: 2;
-  min-width: 350px;
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
+/* Detail Box Styling */
+.content-box {
+  background: var(--card-bg);
+  border-radius: 24px;
+  padding: 35px;
+  margin-bottom: 30px;
+  border: 1px solid rgba(255,255,255,0.05);
+  transition: 0.3s;
 }
 
-.content-box {
-  background: white;
-  border-radius: 30px;
-  padding: 35px;
-  box-shadow: 0 15px 35px rgba(0,0,0,0.1);
-  border-left: 5px solid #3498db;
+.content-box:hover {
+  background: #1c2128;
+  border-color: var(--accent);
 }
 
 .content-box h3 {
-  color: #0f4c3a;
+  font-size: 1.25rem;
+  color: var(--accent);
   margin-bottom: 20px;
-  font-size: 1.4rem;
   display: flex;
   align-items: center;
   gap: 12px;
@@ -122,133 +178,125 @@ header {
 /* Achievement Message */
 .achievement-msg {
   font-family: 'Noto Serif Bengali', serif;
-  color: #444;
-  line-height: 1.8;
   font-style: italic;
-  font-size: 1rem;
+  color: var(--text-dim);
+  line-height: 1.9;
+  font-size: 1.05rem;
+  border-left: 3px solid var(--accent);
+  padding-left: 20px;
 }
 
-/* Table */
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
+/* Table Styling */
+table { width: 100%; border-collapse: collapse; }
+table td { padding: 18px 0; border-bottom: 1px solid rgba(255,255,255,0.05); font-size: 0.95rem; }
+table td:first-child { color: var(--text-dim); font-weight: 400; width: 40%; }
+table td:last-child { color: var(--text); font-weight: 600; }
 
-table td {
-  padding: 15px 10px;
-  border-bottom: 1px solid #eee;
-  font-size: 0.95rem;
-}
-
-table td:first-child {
-  font-weight: 700;
-  color: #2980b9;
-  width: 40%;
-}
-
-/* Social Buttons */
+/* Social Icons */
+.social-links { display: flex; justify-content: center; gap: 15px; margin-top: 10px; }
 .social-btn {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 45px;
-    height: 45px;
-    background: #eef2f3;
-    color: #3498db;
-    border-radius: 50%;
-    margin: 0 8px;
-    transition: 0.3s;
-    text-decoration: none;
-    border: 1px solid #3498db;
+  width: 45px; height: 45px;
+  background: #1c2128;
+  color: var(--text-dim);
+  display: flex; align-items: center; justify-content: center;
+  border-radius: 50%;
+  text-decoration: none;
+  transition: 0.3s;
+  border: 1px solid rgba(255,255,255,0.1);
 }
+
 .social-btn:hover {
-    transform: translateY(-5px);
-    background: #3498db;
-    color: white;
+  color: var(--accent);
+  border-color: var(--accent);
+  transform: translateY(-5px);
+  box-shadow: 0 5px 15px var(--accent-glow);
 }
 
 /* Footer (Site Standard) */
 footer {
-  background: #051929;
-  color: white;
-  padding: 40px 20px 20px;
   text-align: center;
-  margin-top: 50px;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
+  padding: 60px 20px;
+  background: #0d1117;
+  color: var(--text-dim);
+  border-top: 1px solid rgba(255,255,255,0.05);
 }
 
-.footer-links a { color: #b2f7ef; text-decoration: none; margin: 0 10px; font-size: 0.9rem; }
+.footer-links { margin-bottom: 30px; }
+.footer-links a { color: var(--text-dim); text-decoration: none; margin: 0 12px; font-size: 0.85rem; transition: 0.3s; }
+.footer-links a:hover { color: var(--accent); }
 
+.footer-time {
+  font-family: 'Fira Code', monospace;
+  color: var(--accent);
+  font-size: 1rem;
+  margin-bottom: 20px;
+  display: block;
+}
+
+.dev-credit { 
+  margin-top: 25px; 
+  padding-top: 25px; 
+  border-top: 1px solid rgba(255,255,255,0.05); 
+}
 .dev-credit a { color: #2ecc71; text-decoration: none; font-weight: 700; }
 
-@media(max-width: 768px) {
-  .container { flex-direction: column; }
+@media (max-width: 850px) {
+  .container { grid-template-columns: 1fr; }
+  .profile-card { width: 100%; }
 }
 </style>
 </head>
 <body>
 
-<header>🌟 Star Alumnus</header>
+<header>
+  <h1>&lt; STAR ALUMNUS /&gt;</h1>
+</header>
 
 <div class="container">
-  <div class="profile-card">
-    <img src="https://legitimate-magenta-oxhostjggp.edgeone.app/Susrita.jpg" alt="Topper Photo">
+  <aside class="profile-card">
+    <div class="star-icon"><i class="fas fa-star"></i></div>
+    <div class="img-container">
+      <img src="https://legitimate-magenta-oxhostjggp.edgeone.app/Susrita.jpg" alt="Topper Photo">
+    </div>
     <h2>Susrita Giri</h2>
-    <span class="badge"><i class="fas fa-trophy"></i> ACADEMIC TOPPER</span>
+    <div class="badge">Academic Topper</div>
     
-    <div style="margin: 20px 0; color: #555; font-size: 0.9rem;">
-        <p><i class="fas fa-university"></i> Techno India University</p>
-        <p><i class="fas fa-star"></i> Geoid Excellence Award</p>
+    <div style="margin: 20px 0; text-align: left; padding: 0 10px;">
+        <p style="font-size: 0.9rem; color: var(--text-dim); margin-bottom: 12px;">
+            <i class="fas fa-university" style="color: var(--accent); width: 20px;"></i> Techno India University(current)
+        </p>
+        <p style="font-size: 0.9rem; color: var(--text-dim);">
+            <i class="fas fa-award" style="color: var(--accent); width: 20px;"></i> Geoid Study Centre
+        </p>
     </div>
 
     <div class="social-links">
-        <a href="#" class="social-btn"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="social-btn"><i class="fab fa-instagram"></i></a>
-        <a href="mailto:#" class="social-btn"><i class="fas fa-envelope"></i></a>
+      <a href="#" class="social-btn"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" class="social-btn"><i class="fab fa-instagram"></i></a>
+      <a href="mailto:#" class="social-btn"><i class="fas fa-envelope"></i></a>
     </div>
-  </div>
+  </aside>
 
-  <div class="profile-details">
-    
+  <main>
     <div class="content-box">
         <h3><i class="fas fa-graduation-cap"></i> Journey at GEOID</h3>
         <div class="achievement-msg">
-            "জিওয়েড স্টাডি সেন্টারের সঠিক গাইডেন্স এবং সুদেব স্যারের অনুপ্রেরণা আমাকে আমার লক্ষ্যে পৌঁছাতে অনেক সাহায্য করেছে। এখানকার পড়াশোনার পরিবেশ এবং ম্যাপ পয়েন্টটিং-এর বিশেষ কৌশলগুলি অতুলনীয়।"
+            "জিওয়েড স্টাডি সেন্টারের সঠিক গাইডেন্স এবং Sukdeb স্যারের অনুপ্রেরণা আমাকে আমার লক্ষ্যে পৌঁছাতে অনেক সাহায্য করেছে। এখানকার পড়াশোনার পরিবেশ এবং ম্যাপ পয়েন্টটিং-এর বিশেষ কৌশলগুলি অতুলনীয়।"
         </div>
     </div>
 
     <div class="content-box">
-        <h3><i class="fas fa-award"></i> Academic Achievements</h3>
+        <h3><i class="fas fa-trophy"></i> Academic Dossier</h3>
         <table>
-          <tr>
-            <td>Ex-Student Rank</td>
-            <td>Institution Topper (Geography)</td>
-          </tr>
-          <tr>
-            <td>Batch Year</td>
-            <td>2022 - 2024</td>
-          </tr>
-          <tr>
-            <td>Current Study</td>
-            <td>Higher Studies @ Techno India</td>
-          </tr>
-          <tr>
-            <td>Focus Subject</td>
-            <td>Geography & Allied Sciences</td>
-          </tr>
-          <tr>
-            <td>Achievement</td>
-            <td>Distinction in Practical Works</td>
-          </tr>
-          <tr>
-            <td>Status</td>
-            <td>Active Alumni Member</td>
-          </tr>
+          <tr><td>Ex-Student Rank</td><td>Institution Topper (Geography)</td></tr>
+          <tr><td>Batch Year</td><td>2022 - 2025</td></tr>
+          <tr><td>Current Study</td><td>Higher Studies @ Techno India</td></tr>
+          <tr><td>Focus Subject</td><td>Computer Sc.(current)</td></tr>
+          <tr><td>Key Achievement</td><td>Distinction in Practical Works</td></tr>
+          <tr><td>Alumni Status</td><td>Active Member</td></tr>
         </table>
     </div>
-
-  </div>
+  </main>
 </div>
 
 <footer>
@@ -259,18 +307,18 @@ footer {
     <a href="#">Gallery</a>
   </div>
 
-  <div style="font-size: 0.8rem; color: #888; margin: 15px 0;">
-    🕒 <span id="footer-time">00:00:00</span> | Topper Profile | Version 2.4.0
+  <span id="footer-time" class="footer-time">00:00:00</span>
+  
+  <p style="font-size: 0.8rem; letter-spacing: 1px;">
+    TOPPER PROFILE | OFFICIAL ARCHIVE
+  </p>
+
+  <div class="dev-credit">
+    <p style="font-size: 0.75rem;">DESIGNED & DEVELOPED BY <br>
+    <a href="community.html#developer-member">SUBHADIP SATPATI</a></p>
   </div>
 
-  <div style="border-top: 1px solid rgba(255,255,255,0.1); margin-top: 20px; padding-top: 20px;">
-    <p style="font-size: 0.85rem; color: #bdc3c7;">
-        DESIGNED & DEVELOPED BY <br>
-        <a href="community.html#developer-member" style="color: #2ecc71; text-decoration: none; font-weight: 700;">SUBHADIP SATPATI</a>
-    </p>
-  </div>
-
-  <p style="margin-top:15px; font-size: 0.8rem; opacity: 0.5;">© 2025 GEOID STUDY CENTRE. All rights reserved.</p>
+  <p style="margin-top:20px; font-size: 0.7rem; opacity: 0.4;">© 2025 GEOID STUDY CENTRE. ALL RIGHTS RESERVED.</p>
 </footer>
 
 <script>
@@ -280,6 +328,18 @@ footer {
     }
     setInterval(updateTime, 1000);
     updateTime();
+
+    // Scroll reveal animation
+    window.addEventListener('scroll', () => {
+      const boxes = document.querySelectorAll('.content-box');
+      boxes.forEach(box => {
+        const boxTop = box.getBoundingClientRect().top;
+        if(boxTop < window.innerHeight - 50) {
+          box.style.opacity = '1';
+          box.style.transform = 'translateY(0)';
+        }
+      });
+    });
 </script>
 
 </body>
