--- a/vola.html
+++ b/vola.html
@@ -4,10 +4,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Honours Alumnus Profile | GEOID CENTRE</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Noto+Serif+Bengali:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Noto+Serif+Bengali:wght@400;700&family=Fira+Code:wght@400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
-/* Global Styles */
+/* Modern Dark Variables */
+:root {
+  --bg: #0b0e14;
+  --card-bg: #161b22;
+  --accent: #2ecc71; /* Alumnus Theme: Emerald Green */
+  --accent-glow: rgba(46, 204, 113, 0.2);
+  --text: #e6edf3;
+  --text-dim: #8b949e;
+  --danger: #ff7675;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -17,243 +27,280 @@
 }
 
 body {
-  background: linear-gradient(135deg, #b2f7ef, #0f4c3a);
+  background-color: var(--bg);
+  color: var(--text);
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  overflow-x: hidden;
 }
 
-/* Header (Site Standard) */
+/* Background Depth */
+body::before {
+  content: "";
+  position: fixed;
+  top: 0; left: 0; width: 100%; height: 100%;
+  background: radial-gradient(circle at 50% 50%, #1a1f2e 0%, #0b0e14 100%);
+  z-index: -1;
+}
+
+/* Animations */
+@keyframes slideUp {
+  from { opacity: 0; transform: translateY(40px); filter: blur(10px); }
+  to { opacity: 1; transform: translateY(0); filter: blur(0); }
+}
+
+/* Header */
 header {
-  background: linear-gradient(135deg, #2ecc71, #1abc9c, #27ae60);
-  color: #fff;
+  padding: 35px 0;
   text-align: center;
-  padding: 25px 0;
-  font-size: 28px;
-  font-weight: 800;
-  letter-spacing: 1px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+  background: rgba(11, 14, 20, 0.85);
+  backdrop-filter: blur(15px);
   position: sticky;
   top: 0;
-  z-index: 1000;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  z-index: 100;
+  border-bottom: 1px solid rgba(255,255,255,0.05);
 }
 
-/* Profile Container */
+header h1 {
+  font-size: 1.4rem;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: var(--accent);
+  text-shadow: 0 0 15px var(--accent-glow);
+}
+
 .container {
-  width: 95%;
-  max-width: 1100px;
-  margin: 50px auto;
-  display: flex;
-  flex-wrap: wrap;
+  width: 90%;
+  max-width: 1200px;
+  margin: 40px auto;
+  display: grid;
+  grid-template-columns: 350px 1fr;
   gap: 30px;
-  flex: 1;
+  animation: slideUp 1s ease-out;
 }
 
-/* Sidebar (Emerald Theme) */
+/* Profile Card Styling */
 .profile-card {
-  flex: 1;
-  min-width: 320px;
-  background: linear-gradient(to bottom, #ffffff, #f1f8e9);
-  border-radius: 30px;
-  padding: 40px 20px;
+  background: var(--card-bg);
+  border-radius: 24px;
+  padding: 40px 30px;
   text-align: center;
-  box-shadow: 0 20px 45px rgba(0,0,0,0.15);
-  border: 2px solid #27ae60;
+  border: 1px solid rgba(255,255,255,0.05);
   height: fit-content;
+  transition: 0.4s;
 }
 
-.profile-card img {
-  width: 200px;
-  height: 200px;
+.profile-card:hover {
+  border-color: var(--accent);
+  transform: translateY(-5px);
+}
+
+.img-container {
+  position: relative;
+  width: 190px;
+  height: 190px;
+  margin: 0 auto 25px;
+}
+
+.img-container img {
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   object-fit: cover;
-  border: 6px solid #27ae60;
-  margin-bottom: 20px;
-  box-shadow: 0 10px 25px rgba(39, 174, 96, 0.3);
+  border: 4px solid var(--accent);
+  padding: 5px;
+  filter: grayscale(20%);
 }
 
-/* Status Indicator Update */
+/* Status Badge - Red for Inactive */
 .status-badge {
-    color: #d63031; /* Premium Red */
-    font-weight: 800;
-    font-size: 0.95rem;
+    color: var(--danger);
+    font-weight: 700;
+    font-size: 0.75rem;
     margin-bottom: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
+    background: rgba(255, 118, 117, 0.1);
+    padding: 5px 15px;
+    border-radius: 20px;
+    width: fit-content;
+    margin: 0 auto 20px;
     text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 .status-dot {
-    width: 10px;
-    height: 10px;
-    background-color: #ff7675;
+    width: 8px;
+    height: 8px;
+    background-color: var(--danger);
     border-radius: 50%;
-    display: inline-block;
-    box-shadow: 0 0 8px #d63031;
+    box-shadow: 0 0 8px var(--danger);
 }
 
-.profile-card h2 {
-  color: #051929;
-  font-size: 1.8rem;
-  margin-bottom: 5px;
-}
+.profile-card h2 { font-size: 1.7rem; margin-bottom: 8px; color: #fff; }
 
-.profile-card .badge {
-  background: linear-gradient(45deg, #1e8449, #27ae60);
+.badge {
+  font-size: 0.75rem;
+  font-weight: 700;
   color: #fff;
+  background: linear-gradient(45deg, #1e8449, #2ecc71);
   padding: 6px 20px;
   border-radius: 50px;
-  font-size: 0.85rem;
-  font-weight: 700;
   display: inline-block;
-  margin-bottom: 20px;
-  box-shadow: 0 4px 10px rgba(39, 174, 96, 0.4);
+  margin-bottom: 25px;
+  letter-spacing: 1px;
 }
 
-/* Details Section */
-.profile-details {
-  flex: 2;
-  min-width: 350px;
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-}
-
+/* Detail Box Styling */
 .content-box {
-  background: white;
-  border-radius: 30px;
+  background: var(--card-bg);
+  border-radius: 24px;
   padding: 35px;
-  box-shadow: 0 15px 35px rgba(0,0,0,0.1);
-  border-left: 5px solid #27ae60;
+  margin-bottom: 30px;
+  border: 1px solid rgba(255,255,255,0.05);
+  transition: 0.3s;
+}
+
+.content-box:hover {
+  background: #1c2128;
+  border-color: var(--accent);
 }
 
 .content-box h3 {
-  color: #0f4c3a;
+  font-size: 1.25rem;
+  color: var(--accent);
   margin-bottom: 20px;
-  font-size: 1.4rem;
   display: flex;
   align-items: center;
   gap: 12px;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
+/* Alumnus Message */
+.reflection-msg {
+  font-family: 'Noto Serif Bengali', serif;
+  font-style: italic;
+  color: var(--text-dim);
+  line-height: 1.9;
+  font-size: 1.05rem;
+  border-left: 3px solid var(--accent);
+  padding-left: 20px;
 }
 
-table td {
-  padding: 15px 10px;
-  border-bottom: 1px solid #eee;
-  font-size: 0.95rem;
-}
+/* Table Styling */
+table { width: 100%; border-collapse: collapse; }
+table td { padding: 18px 0; border-bottom: 1px solid rgba(255,255,255,0.05); font-size: 0.95rem; }
+table td:first-child { color: var(--text-dim); width: 40%; }
+table td:last-child { color: var(--text); font-weight: 600; }
 
-table td:first-child {
-  font-weight: 700;
-  color: #1e8449;
-  width: 40%;
-}
-
+/* Social Icons */
+.social-links { display: flex; justify-content: center; gap: 15px; margin-top: 10px; }
 .social-btn {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 45px;
-    height: 45px;
-    background: #f1f8e9;
-    color: #1e8449;
-    border-radius: 50%;
-    margin: 0 8px;
-    transition: 0.3s;
-    text-decoration: none;
-    border: 1px solid #27ae60;
+  width: 45px; height: 45px;
+  background: #1c2128;
+  color: var(--text-dim);
+  display: flex; align-items: center; justify-content: center;
+  border-radius: 12px;
+  text-decoration: none;
+  transition: 0.3s;
+  border: 1px solid rgba(255,255,255,0.1);
 }
+
 .social-btn:hover {
-    transform: translateY(-5px);
-    background: #27ae60;
-    color: white;
+  color: var(--accent);
+  border-color: var(--accent);
+  transform: translateY(-5px);
+  box-shadow: 0 5px 15px var(--accent-glow);
 }
 
 /* Footer (Site Standard) */
 footer {
-  background: #051929;
-  color: white;
-  padding: 40px 20px 20px;
   text-align: center;
-  margin-top: 50px;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
+  padding: 60px 20px;
+  background: #0d1117;
+  color: var(--text-dim);
+  border-top: 1px solid rgba(255,255,255,0.05);
 }
 
-.footer-links a { color: #b2f7ef; text-decoration: none; margin: 0 10px; font-size: 0.9rem; }
+.footer-links { margin-bottom: 30px; }
+.footer-links a { color: var(--text-dim); text-decoration: none; margin: 0 12px; font-size: 0.85rem; transition: 0.3s; }
+.footer-links a:hover { color: var(--accent); }
 
+.footer-time {
+  font-family: 'Fira Code', monospace;
+  color: var(--accent);
+  font-size: 1rem;
+  margin-bottom: 20px;
+  display: block;
+}
+
+.dev-credit { 
+  margin-top: 25px; 
+  padding-top: 25px; 
+  border-top: 1px solid rgba(255,255,255,0.05); 
+}
 .dev-credit a { color: #2ecc71; text-decoration: none; font-weight: 700; }
 
-@media(max-width: 768px) {
-  .container { flex-direction: column; }
+@media (max-width: 850px) {
+  .container { grid-template-columns: 1fr; }
+  .profile-card { width: 100%; }
 }
 </style>
 </head>
 <body>
 
-<header>📖 Higher Studies Alumni</header>
+<header>
+  <h1>&lt; ALUMNUS PROFILE /&gt;</h1>
+</header>
 
 <div class="container">
-  <div class="profile-card">
-    <img src="https://technical-emerald-m17ryypvki.edgeone.app/vola.jpg" alt="Honours Student Photo">
-    
+  <aside class="profile-card">
+    <div class="img-container">
+      <img src="https://technical-emerald-m17ryypvki.edgeone.app/vola.jpg" alt="Sanjay Ranjit">
+    </div>
+
     <div class="status-badge">
         <span class="status-dot"></span> Currently not active
     </div>
 
     <h2>Sanjay Ranjit</h2>
-    <span class="badge"><i class="fas fa-book-reader"></i> GEOGRAPHY HONOURS</span>
+    <div class="badge">GEOGRAPHY HONOURS</div>
     
-    <div style="margin: 20px 0; color: #555; font-size: 0.9rem;">
-        <p><i class="fas fa-university"></i> Karnataka University</p>
-        <p><i class="fas fa-user-check"></i> Verified Alumni Member</p>
+    <div style="margin: 20px 0; text-align: left; padding: 0 10px;">
+        <p style="font-size: 0.9rem; color: var(--text-dim); margin-bottom: 12px;">
+            <i class="fas fa-university" style="color: var(--accent); width: 20px;"></i> Karnataka University
+        </p>
+        <p style="font-size: 0.9rem; color: var(--text-dim);">
+            <i class="fas fa-user-check" style="color: var(--accent); width: 20px;"></i> Verified Alumnus
+        </p>
     </div>
 
     <div class="social-links">
-        <a href="#" class="social-btn"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="social-btn"><i class="fab fa-linkedin-in"></i></a>
-        <a href="mailto:#" class="social-btn"><i class="fas fa-envelope"></i></a>
+      <a href="#" class="social-btn"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" class="social-btn"><i class="fab fa-linkedin-in"></i></a>
+      <a href="mailto:#" class="social-btn"><i class="fas fa-envelope"></i></a>
     </div>
-  </div>
+  </aside>
 
-  <div class="profile-details">
+  <main>
     <div class="content-box">
         <h3><i class="fas fa-pen-nib"></i> Alumnus Reflection</h3>
-        <p style="font-family: 'Noto Serif Bengali', serif; color: #444; line-height: 1.8; font-style: italic;">
-            "জিওয়েড স্টাডি সেন্টারে কাটানো সময়গুলো আমার শিক্ষা জীবনের ভিত মজবুত করেছে। বর্তমানে কর্ণাটক ইউনিভার্সিটিতে উচ্চশিক্ষার ক্ষেত্রে এখানকার দেওয়া কনসেপ্টগুলো আজও খুব কাজে লাগে।"
-        </p>
+        <div class="reflection-msg">
+            "জিওয়েড স্টাডি সেন্টারে কাটানো সময়গুলো আমার শিক্ষা জীবনের ভিত মজবুত করেছে। বর্তমানে কর্ণাটক ইউনিভার্সিটিতে উচ্চশিক্ষার ক্ষেত্রে এখানকার দেওয়া কনসেপ্টগুলো আজও খুব কাজে লাগে।"
+        </div>
     </div>
 
     <div class="content-box">
         <h3><i class="fas fa-history"></i> Academic Background</h3>
         <table>
-          <tr>
-            <td>Membership Status</td>
-            <td>Ex-Student (Premium Alumnus)</td>
-          </tr>
-          <tr>
-            <td>Current University</td>
-            <td>Karnataka University</td>
-          </tr>
-          <tr>
-            <td>Account Status</td>
-            <td style="color: #d63031; font-weight: 700;">Currently not active</td>
-          </tr>
-          <tr>
-            <td>Specialization</td>
-            <td>Geography Honours</td>
-          </tr>
+          <tr><td>Membership Status</td><td>Ex-Student (Premium Alumnus)</td></tr>
+          <tr><td>Current University</td><td>Karnataka University</td></tr>
+          <tr><td>Account Status</td><td style="color: var(--danger);">Currently Offline</td></tr>
+          <tr><td>Specialization</td><td>Geography Honours</td></tr>
+          <tr><td>Record ID</td><td>#GEO-AL-246</td></tr>
         </table>
     </div>
-  </div>
+  </main>
 </div>
 
 <footer>
@@ -263,15 +310,19 @@ footer {
     <a href="noticeboard.html">Notice</a>
     <a href="#">Resources</a>
   </div>
-  <div style="font-size: 0.8rem; color: #888; margin: 15px 0;">
-    🕒 <span id="footer-time">00:00:00</span> | Version 2.4.6
+
+  <span id="footer-time" class="footer-time">00:00:00</span>
+  
+  <p style="font-size: 0.8rem; letter-spacing: 1px;">
+    ALUMNUS DATA ARCHIVE | VERSION 2.4.6
+  </p>
+
+  <div class="dev-credit">
+    <p style="font-size: 0.75rem;">ARCHITECTURE BY <br>
+    <a href="community.html#developer-member">SUBHADIP SATPATI</a></p>
   </div>
-  <div style="border-top: 1px solid rgba(255,255,255,0.1); margin-top: 20px; padding-top: 20px;">
-    <p style="font-size: 0.85rem; color: #bdc3c7;">
-        DESIGNED & DEVELOPED BY <br>
-        <a href="community.html#developer-member" style="color: #2ecc71; text-decoration: none; font-weight: 700;">SUBHADIP SATPATI</a>
-    </p>
-  </div>
+
+  <p style="margin-top:20px; font-size: 0.7rem; opacity: 0.4;">© 2025 GEOID STUDY CENTRE. SECURED SYSTEM.</p>
 </footer>
 
 <script>
@@ -281,6 +332,18 @@ footer {
     }
     setInterval(updateTime, 1000);
     updateTime();
+
+    // Scroll reveal effect
+    window.addEventListener('scroll', () => {
+      const boxes = document.querySelectorAll('.content-box');
+      boxes.forEach(box => {
+        const boxTop = box.getBoundingClientRect().top;
+        if(boxTop < window.innerHeight - 50) {
+          box.style.opacity = '1';
+          box.style.transform = 'translateY(0)';
+        }
+      });
+    });
 </script>
 
 </body>
