--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <li><a href="notice.html">Notice</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="course.html">Courses</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="student.html">Help Desk</a></li>
                 <li><a href="commiunity.html">Commiunity</a></li>
                 <li><a href="https://deft-sundae-cb8562.netlify.app/" style="color:var(--secondary)">Student Portal</a></li>
             </ul>
@@ -481,4 +481,5 @@
         });
     </script>
 </body>
+
 </html>
