--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
                 <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="notice.html">Notice</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="portal.html">Student Portal</a></li>
                 <li><a href="course.html">Courses</a></li>
                 <li><a href="student.html">Help Desk</a></li>
                 <li><a href="commiunity.html">Commiunity</a></li>
@@ -483,4 +484,5 @@
 </body>
 
 </html>
+
 
