--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <section id="mock-test">
         <h2 class="section-title">Academic Mock Test 2026</h2>
         <div class="mock-test-box" data-aos="fade-right">
-            <img src="https://instasize.com/s/ca9244480eab5de51e67c56798982489706ad9ec288233d1005d66370a0eb498" alt="Mock Test" style="width:200px; border-radius:15px;">
+            <img src="https://ik.imagekit.io/hywzwogxt/MOCK.jpeg" alt="Mock Test" style="width:200px; border-radius:15px;">
             <div>
                 <h3>Madhyamik Geography Mock Series</h3>
                 <p style="margin:15px 0; color:#666;">Prepare with our specialized question papers designed by experts to guarantee success in your upcoming boards.</p>
@@ -484,5 +484,6 @@
 </body>
 
 </html>
+
 
 
