--- a/subha.html
+++ b/subha.html
@@ -335,6 +335,14 @@ footer a:hover {
           <div class="cert-frame">
             <img src="https://img.sanishtech.com/u/cfec69f875cb115943a50237c6743d54.png" alt="Government Certificate 2">
           </div>
+
+          <div class="cert-frame">
+            <img src="c:\Users\satpa\Downloads\MyBharat_Quiz_Certificate (1).png" alt="Government Certificate 3">
+          </div>
+
+          <div class="cert-frame">
+            <img src="C:\Users\satpa\Downloads\MyBharat_Quiz_Certificate (2).png" alt="Government Certificate 4">
+          </div>
         </div>
     </div>
 
