--- a/portal.html
+++ b/portal.html
@@ -202,7 +202,7 @@
                 <div style="width: 2px; height: 50px; background: var(--border);"></div>
                 <div class="date-item">
                     <h4>Registration Ends</h4>
-                    <p>10 Jan 2026</p>
+                    <p>Continue</p>
                 </div>
             </div>
         </div>
@@ -233,3 +233,4 @@
 </body>
 
 </html>
+
