--- a/portal.html
+++ b/portal.html
@@ -216,7 +216,7 @@
             </div>
             <div class="footer-col">
                 <h3>📞 Contact</h3>
-                <p style="color: var(--text-dim);">Contai, Purba Medinipur<br>West Bengal, 721401</p>
+                <p style="color: var(--text-dim);"><br>+91 8207084112</br>Contai, Purba Medinipur<br>West Bengal, 721401</p>
             </div>
             <div class="footer-col">
                 <h3>🔗 Quick Links</h3>
@@ -233,4 +233,5 @@
 </body>
 
 </html>
+
 
