--- a/index.html
+++ b/index.html
@@ -833,26 +833,7 @@
             <a href="#courses" class="btn-premium">Explore Our Excellence</a>
         </div>
     </section>
-
-    <div class="gallery-container">
-  <div class="gallery-item">
-    <img src="https://picsum.photos/600/400?random=1" alt="Nature">
-    <div class="caption">Mountain View</div>
-  </div>
-  <div class="gallery-item">
-    <img src="https://picsum.photos/600/400?random=2" alt="City">
-    <div class="caption">City Lights</div>
-  </div>
-  <div class="gallery-item">
-    <img src="https://picsum.photos/600/400?random=3" alt="Ocean">
-    <div class="caption">Deep Blue</div>
-  </div>
-  <div class="gallery-item">
-    <img src="https://picsum.photos/600/400?random=4" alt="Forest">
-    <div class="caption">Forest Path</div>
-  </div>
-</div>
-
+    
     <section id="mock-test">
         <h2 class="section-title">Academic Mock Test 2026</h2>
         <div class="mock-test-box" data-aos="fade-right">
@@ -890,12 +871,17 @@
  <section id="study-hub" style="background: #f0f4f8; padding: 100px 8%;">
     <h2 class="section-title">Study Resources</h2>
     
-    <div class="study-3d-grid">
-        <div class="study-card-3d border-syll" data-aos="zoom-in" onclick="notifySoon(this)">
-            <div class="icon-box-3d"><img src="https://cdn-icons-png.flaticon.com/512/3382/3382551.png"></div>
+<div class="study-3d-grid">
+    <a href="syllabus-list.html" style="text-decoration: none; color: inherit;">
+        <div class="study-card-3d border-syll" data-aos="zoom-in" style="cursor: pointer;">
+            <div class="icon-box-3d">
+                <img src="https://cdn-icons-png.flaticon.com/512/3382/3382551.png" alt="Syllabus Icon">
+            </div>
             <h4>Syllabus</h4>
-            <span class="status-msg">Data will be added soon</span>
+            <span class="status-msg" style="color: #0000ff; text-decoration: underline;">Click to Open Library</span>
         </div>
+    </a>
+</div>
 
         <div class="study-card-3d border-ncert" data-aos="zoom-in" data-aos-delay="100" onclick="notifySoon(this)">
             <div class="icon-box-3d"><img src="https://cdn-icons-png.flaticon.com/512/2232/2232688.png"></div>
@@ -1259,6 +1245,7 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
 
