--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
     <h2 class="section-title">Study Resources</h2>
     
 <div class="study-3d-grid">
-    <a href="syllabus-list.html" style="text-decoration: none; color: inherit;">
+    <a href="syllabuslist.html" style="text-decoration: none; color: inherit;">
         <div class="study-card-3d border-syll" data-aos="zoom-in" style="cursor: pointer;">
             <div class="icon-box-3d">
                 <img src="https://cdn-icons-png.flaticon.com/512/3382/3382551.png" alt="Syllabus Icon">
@@ -1245,6 +1245,7 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
 
